objects/DuplicateLine__c.object
<CustomObject>
    <fields>
        <fullName>BatchId__c</fullName>
        <label>BatchId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpptyEx__c</fullName>
        <externalId>true</externalId>
        <label>OpptyEx</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ToUpdate</fullName>
                    <default>true</default>
                    <label>ToUpdate</label>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <label>message</label>
        <type>TextArea</type>
    </fields>
    <label>DuplicateLine</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>DuplicateLine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DuplicateLines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>